Fix: z-index order in UrbaniaArticle

--- a/screens/urbania-article/src/urbania-article.module.scss
+++ b/screens/urbania-article/src/urbania-article.module.scss
@@ -57,12 +57,11 @@ $color-universities-text: #f33;
 
     .content {
         display: flex;
-        z-index: 1;
+        z-index: 5; // @note sit above everything
         flex-direction: column;
         align-items: center;
         justify-content: center;
         width: 100%;
-        // overflow: hidden;
         color: $color-urbania-text;
         text-align: center;
 
@@ -248,6 +247,7 @@ $color-universities-text: #f33;
         }
     }
 
+    // @note the article's visual is a video (-> not in background layers)
     &.isVideo {
         .visual {
             @extend %fullscreen;
@@ -257,7 +257,6 @@ $color-universities-text: #f33;
 
         .content {
             position: relative;
-            z-index: 3;
             flex-grow: 1;
             justify-content: flex-end;
             margin-bottom: 70px;
@@ -289,6 +288,17 @@ $color-universities-text: #f33;
             position: absolute;
         }
     }
+
+    // @note a video was used in the background layers
+    &.hasVideoBackground {
+        .visual {
+            z-index: 0; // make background layers supplant the article's visual
+        }
+    }
+}
+
+.background {
+    background-color: red;
 }
 
 .visual {
